REGRESSION (r130783): Scrolling is broken going back to a cached page from a page that still has outstanding subresources. <rdar://problem/14601124> and https://bugs.webkit.org/show_bug.cgi?id=119416

Reviewed by Darin Adler.

Source/WebCore:

Test: http/tests/loading/unfinished-load-back-to-cached-page-callbacks.html

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::stopLoading): Always explicitly cancel the Document parser when stopLoading is called.

LayoutTests:

* http/tests/loading/resources/page-with-slow-loading-subresource.html: Added.
* http/tests/loading/resources/slowimage.php: Added.
* http/tests/loading/unfinished-load-back-to-cached-page-callbacks-expected.txt:
* http/tests/loading/unfinished-load-back-to-cached-page-callbacks.html:
* http/tests/loading/unfinished-main-resource-back-to-cached-page-callbacks-expected.txt: Copied from LayoutTests/http/tests/loading/unfinished-load-back-to-cached-page-callbacks-expected.txt.
* http/tests/loading/unfinished-main-resource-back-to-cached-page-callbacks.html: Copied from LayoutTests/http/tests/loading/unfinished-load-back-to-cached-page-callbacks.html.

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@153649 268f45cc-cd09-0410-ab3c-d52691b4dbfc